@startuml
skinparam classAttributeIconSize 0
title __ADAPTER's Class Diagram__\n



      class com.MovieBookingSystem.Adapter.AmazonPay {
          - READER : BufferedReader
          - cardExpiryDate : String
          - cardOwnerName : String
          - customerCardNumber : String
          - cvvNumber : int
          + AmazonPay()
          + getCardExpiryDate()
          + getCardOwnerName()
          + getCustomerCardNumber()
          + getCvvNumber()
          + pay()
          + paymentInformation()
          + setCardExpiryDate()
          + setCardOwnerName()
          + setCustomerCardNumber()
          + setCvvNumber()
          + validatePayment()
          - convertToAmazonPay()
      }


  





  



      interface com.MovieBookingSystem.Adapter.PaymentAdapter {
          {abstract} + collectUserPaymentInformation()
          {abstract} + payment()
      }


  



      class com.MovieBookingSystem.Adapter.PaymentAdapterImpl {
          + PaymentAdapterImpl()
          + collectUserPaymentInformation()
          + payment()
      }


  

  com.MovieBookingSystem.Adapter.AmazonPay .up.|> com.MovieBookingSystem.Strategy.PaymentMethod
  com.MovieBookingSystem.Adapter.AmazonPay o-- com.MovieBookingSystem.Strategy.VisaCard : visaCard
  com.MovieBookingSystem.Adapter.PaymentAdapterImpl .up.|> com.MovieBookingSystem.Adapter.PaymentAdapter
  com.MovieBookingSystem.Adapter.PaymentAdapterImpl o-- com.MovieBookingSystem.Strategy.PayPal : payPal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
